--- a/travel/package.json
+++ b/travel/package.json
@@ -25,6 +25,7 @@
     "fastclick": "^1.0.6",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "swiper": "^6.3.5",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
